ABTestDeployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - gw
  http:
  - match:
    - uri:
        prefix: "/"
      headers:
        version:
          exact: v1
    route:
    - destination:
        port:
          number: 5000
        host: helloworld
        subset: v1
      weight: 100
  - match:
    - uri:
        prefix: "/"
      headers:
        version:
          exact: v2
    route:
    - destination:
        port:
          number: 5000
        host: helloworld
        subset: v2
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: helloworld
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
